# nonebot-plugin-wordle

./: .gitignore  bot.py  mypy.ini  pyproject.toml
nonebot_plugin_wordle/: __init__.py  deps.py  image.py  util.py
